--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
         <link rel="stylesheet" href="./css/tailwind/tailwind.min.css" />
-        <link rel="icon" type="image/png" sizes="16x16" href="./favicon-tailwind.png" />
+        <link rel="stylesheet" href="./public/css/output.css" />
+        <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon-tailwind.png" />
 
-        <script src="./js/main.js"></script>
+        <script src="./public/js/main.js"></script>
     </head>
 
     <body class="antialiased bg-body text-body font-body">
@@ -99,16 +100,16 @@
 
         <section class="pt-12 text-center">
             <div class="max-w-lg mx-auto mb-8">
-                <h2 class="text-3xl md:text-4xl mb-4 font-bold font-heading">
+                <h2 class="text-3xl md:text-4xl mb-4 font-bold px-6 sm:px-0">
                     <span>Level up your </span>
                     <span class="text-indigo-600">Marketing Content</span>
                     <span> with Writee.</span>
                 </h2>
-                <p class="text-blueGray-400 leading-relaxed">Best-in-Class Copywriting to take your business to the next level!</p>
+                <p class="text-blueGray-400 leading-relaxed px-6 sm:px-0">Best-in-Class Copywriting to take your business to the next level!</p>
             </div>
-            <div>
-                <a class="block sm:inline-block py-4 px-8 mb-4 sm:mb-0 sm:mr-3 text-xs text-white text-center font-semibold leading-none bg-indigo-600 hover:bg-indigo-700 rounded" href="#">Get Started Now</a>
-                <a class="block sm:inline-block py-4 px-8 text-xs text-blueGray-500 hover:text-blueGray-600 text-center font-semibold leading-none bg-white rounded" href="#">Learn More</a>
+            <div class="flex justify-center items-center flex-col sm:flex-row">
+                <button class="inline-block py-4 px-8 mb-4 sm:mb-0 sm:mr-3 text-xs text-white text-center font-semibold leading-none bg-indigo-600 hover:bg-indigo-700 rounded max-w-[250px] min-w-[180px]">Get Started Now</button>
+                <button class="inline-block py-4 px-8 text-xs text-blueGray-500 hover:text-blueGray-600 bg-gray-100 bg-opacity-70 hover:bg-gray-200 text-center font-semibold leading-none rounded max-w-[250px] min-w-[180px]">Learn More</button>
             </div>
         </section>
 
@@ -123,30 +124,30 @@
 
         <div class="container px-4 mx-auto">
             <div class="flex flex-wrap justify-between pt-8 pb-16">
-                <div class="flex w-1/2 lg:w-auto py-4">
+                <div class="flex w-1/2 lg:w-auto py-4 mr-10">
                     <div class="flex justify-center items-center bg-blueGray-50 rounded-xl h-12 w-12 sm:h-20 sm:w-20">
                         <img class="h-6 sm:h-8" src="./metis-assets/icons/user-circle.svg" alt="" />
                     </div>
                     <div class="sm:py-2 ml-2 sm:ml-6">
-                        <span class="sm:text-2xl font-bold font-heading">250 324</span>
+                        <span class="sm:text-2xl font-bold">250 324</span>
                         <p class="text-xs sm:text-base text-blueGray-400">Followers</p>
                     </div>
                 </div>
-                <div class="flex w-1/2 lg:w-auto py-4">
+                <div class="flex w-1/2 lg:w-auto py-4 mr-10">
                     <div class="flex justify-center items-center bg-blueGray-50 rounded-xl h-12 w-12 sm:h-20 sm:w-20">
                         <img class="h-6 sm:h-8" src="./metis-assets/icons/thumb-up.svg" alt="" />
                     </div>
                     <div class="sm:py-2 ml-2 sm:ml-6">
-                        <span class="sm:text-2xl font-bold font-heading">14 350</span>
+                        <span class="sm:text-2xl font-bold">14 350</span>
                         <p class="text-xs sm:text-base text-blueGray-400">Happy Clients</p>
                     </div>
                 </div>
-                <div class="flex w-1/2 lg:w-auto py-4">
+                <div class="flex w-1/2 lg:w-auto py-4 mr-10">
                     <div class="flex justify-center items-center bg-blueGray-50 rounded-xl h-12 w-12 sm:h-20 sm:w-20">
                         <img class="h-6 sm:h-8" src="./metis-assets/icons/terminal.svg" alt="" />
                     </div>
                     <div class="sm:py-2 ml-2 sm:ml-6">
-                        <span class="sm:text-2xl font-bold font-heading">149 324</span>
+                        <span class="sm:text-2xl font-bold">149 324</span>
                         <p class="text-xs sm:text-base text-blueGray-400">Words Written</p>
                     </div>
                 </div>
@@ -154,10 +155,10 @@
         </div>
 
         <section class="pt-16 pb-20 bg-blueGray-50">
-            <div class="container px-4 mx-auto">
+            <div class="container px-8 mx-auto">
                 <div class="flex flex-wrap items-center mb-12">
                     <div class="w-full lg:w-1/2 mb-6 lg:mb-0">
-                        <h2 class="text-4xl font-bold font-heading">
+                        <h2 class="text-4xl font-bold">
                             <span>Make your</span>
                             <span class="text-indigo-600">life easier</span>
                             <span>with one-click content generation</span>
@@ -180,7 +181,7 @@
                                     d="M4 5a1 1 0 011-1h14a1 1 0 011 1v2a1 1 0 01-1 1H5a1 1 0 01-1-1V5zM4 13a1 1 0 011-1h6a1 1 0 011 1v6a1 1 0 01-1 1H5a1 1 0 01-1-1v-6zM16 13a1 1 0 011-1h2a1 1 0 011 1v6a1 1 0 01-1 1h-2a1 1 0 01-1-1v-6z"
                                 ></path>
                             </svg>
-                            <h3 class="mb-2 font-bold font-heading">Auto-Writing</h3>
+                            <h3 class="mb-2 font-bold">Auto-Writing</h3>
                             <p class="text-sm text-blueGray-400">All you have to do is enter your topic and Writee will take care of the rest, creating a complete article for you in minutes.</p>
                         </div>
                     </div>
@@ -194,7 +195,7 @@
                                     d="M10 6H5a2 2 0 00-2 2v9a2 2 0 002 2h14a2 2 0 002-2V8a2 2 0 00-2-2h-5m-4 0V5a2 2 0 114 0v1m-4 0a2 2 0 104 0m-5 8a2 2 0 100-4 2 2 0 000 4zm0 0c1.306 0 2.417.835 2.83 2M9 14a3.001 3.001 0 00-2.83 2M15 11h3m-3 4h2"
                                 ></path>
                             </svg>
-                            <h3 class="mb-2 font-bold font-heading">Rewriting</h3>
+                            <h3 class="mb-2 font-bold">Rewriting</h3>
                             <p class="text-sm text-blueGray-400">Your content isn't good enough? Writee will improve your existing content, so you can make it more engaging and effective.</p>
                         </div>
                     </div>
@@ -203,7 +204,7 @@
                             <svg class="w-10 h-10 mx-auto mb-4 text-indigo-600" fill="none" stroke="currentColor" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path>
                             </svg>
-                            <h3 class="mb-2 font-bold font-heading">Maximise SEO Potential</h3>
+                            <h3 class="mb-2 font-bold">Maximise SEO Potential</h3>
                             <p class="text-sm text-blueGray-400">Generate content optimised for SEO without having to spend hours researching the keywords.</p>
                         </div>
                     </div>
@@ -217,7 +218,7 @@
                                     d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"
                                 ></path>
                             </svg>
-                            <h3 class="mb-2 font-bold font-heading">Writer's Block Who?</h3>
+                            <h3 class="mb-2 font-bold">Writer's Block Who?</h3>
                             <p class="text-sm text-blueGray-400">Get help with brainstorming and coming up with ideas for new content pieces so you never have to scratch your head looking for ideas</p>
                         </div>
                     </div>
@@ -237,7 +238,7 @@
                 </div>
                 <div class="flex w-full lg:w-1/2 lg:max-w-lg lg:h-128 px-4 lg:pl-16">
                     <div class="my-auto mx-auto pt-8 lg:pt-0 max-w-2xl lg:max-w-lg">
-                        <h2 class="text-3xl md:text-4xl mb-4 font-bold font-heading">
+                        <h2 class="text-3xl md:text-4xl mb-4 font-bold">
                             <span>No need to </span>
                             <span class="text-indigo-600">hire</span>
                             <span> a separate copywriter or agency</span>
@@ -253,7 +254,7 @@
             <div class="container px-4 mx-auto">
                 <div class="max-w-lg mx-auto mb-16 text-center">
                     <span class="inline-block px-3 py-2 text-xs font-semibold bg-blue-100 text-indigo-600 rounded-full uppercase">How to use?</span>
-                    <h2 class="mt-4 mb-2 text-3xl lg:text-4xl font-bold font-heading">
+                    <h2 class="mt-4 mb-2 text-3xl lg:text-4xl font-bold">
                         <span>It is very easy. Just</span>
                         <span class="text-indigo-600"> 3 steps</span>
                         <span>away from magic.</span>
@@ -265,22 +266,22 @@
                     </div>
                     <div class="flex flex-wrap justify-between w-full">
                         <div class="w-1/2 md:w-1/4 z-10 mb-12">
-                            <div class="flex w-20 h-20 mx-auto items-center justify-center shadow bg-white rounded-full">
+                            <div class="flex w-20 h-20 mx-auto items-center justify-center shadow-md bg-white rounded-full outline outline-gray-100 outline-2">
                                 <div class="flex w-16 h-16 mx-auto items-center justify-center text-white font-semibold bg-indigo-600 rounded-full">1</div>
                             </div>
-                            <p class="mt-6 text-base lg:text-lg font-bold font-heading text-center">Choose your tool</p>
+                            <p class="mt-6 text-base lg:text-lg font-bold text-center">Choose your tool</p>
                         </div>
                         <div class="w-1/2 md:w-1/4 z-10 mb-12">
-                            <div class="flex w-20 h-20 mx-auto items-center justify-center shadow bg-white rounded-full">
+                            <div class="flex w-20 h-20 mx-auto items-center justify-center shadow-md bg-white rounded-full outline outline-gray-100 outline-2">
                                 <div class="flex w-16 h-16 mx-auto items-center justify-center text-blueGray-400 font-semibold bg-blueGray-50 rounded-full">2</div>
                             </div>
-                            <p class="mt-6 text-base lg:text-lg text-blueGray-400 font-bold font-heading text-center">Fill in your requirements</p>
+                            <p class="mt-6 text-base lg:text-lg text-blueGray-400 font-bold text-center">Fill in your requirements</p>
                         </div>
                         <div class="w-1/2 md:w-1/4 z-10 mb-12">
-                            <div class="flex w-20 h-20 mx-auto items-center justify-center shadow bg-white rounded-full">
+                            <div class="flex w-20 h-20 mx-auto items-center justify-center shadow-md bg-white rounded-full outline outline-gray-100 outline-2">
                                 <div class="flex w-16 h-16 mx-auto items-center justify-center text-blueGray-400 font-semibold bg-blueGray-50 rounded-full">3</div>
                             </div>
-                            <p class="mt-6 text-base lg:text-lg text-blueGray-400 font-bold font-heading text-center">Voila! You just brewed Magic</p>
+                            <p class="mt-6 text-base lg:text-lg text-blueGray-400 font-bold text-center">Voila! You just brewed Magic</p>
                         </div>
                     </div>
                 </div>
@@ -291,7 +292,7 @@
             <div class="container px-4 mx-auto">
                 <div class="max-w-xl mx-auto text-center">
                     <span class="inline-block text-xs py-1 px-3 bg-indigo-500 rounded text-white font-semibold">Writee your way to glory!</span>
-                    <h2 class="my-3 text-3xl md:text-4xl text-white font-bold font-heading">The New Standards for Marketing</h2>
+                    <h2 class="my-3 text-3xl md:text-4xl text-white font-bold">The New Standards for Marketing</h2>
                     <p class="text-sm md:text-base text-white">Use our best-in-class tools to help you maximize your ROI. We've uncovered the correct recipe for converting visitors into customers.</p>
                     <div class="mt-10"><a class="inline-block py-4 px-8 text-xs text-indigo-600 hover:text-white font-semibold leading-none bg-white hover:bg-indigo-600 border hover:border-white rounded transition duration-300" href="#">Get Started</a></div>
                 </div>
@@ -307,7 +308,7 @@
                     </div>
                     <div class="w-full lg:w-1/2 lg:pl-24 my-auto">
                         <img src="metis-assets/icons/quote.svg" alt="" />
-                        <h2 class="my-4 text-4xl font-bold font-heading">Maecenas nibh purus, pharetra ac felis sed, elementum molestie urna. Nunc at arcu non ipsum auctor lacinia quis quis mi.</h2>
+                        <h2 class="my-4 text-4xl font-bold">Maecenas nibh purus, pharetra ac felis sed, elementum molestie urna. Nunc at arcu non ipsum auctor lacinia quis quis mi.</h2>
                         <p class="mb-1 text-xl">Alice Bradley</p>
                         <p class="text-indigo-600">Head of Operations</p>
                     </div>
@@ -469,7 +470,7 @@
             <div class="w-full lg:w-1/2 px-4 py-8 lg:pt-10 lg:pb-0 lg:pl-12">
                 <div class="flex flex-row flex-wrap justify-around">
                     <div class="w-1/2 lg:w-auto mb-12">
-                        <h5 class="mb-6 text-lg font-bold font-heading">Store</h5>
+                        <h5 class="mb-6 text-lg font-bold">Store</h5>
                         <ul class="space-y-3">
                             <li><a class="text-lg text-blueGray-400 hover:text-blueGray-500" href="#">First Link</a></li>
                             <li><a class="text-lg text-blueGray-400 hover:text-blueGray-500" href="#">Second Link</a></li>
@@ -478,7 +479,7 @@
                         </ul>
                     </div>
                     <div class="w-1/2 lg:w-auto mb-12">
-                        <h5 class="mb-6 text-lg font-bold font-heading">About</h5>
+                        <h5 class="mb-6 text-lg font-bold">About</h5>
                         <ul class="space-y-3">
                             <li><a class="text-lg text-blueGray-400 hover:text-blueGray-500" href="#">First Link</a></li>
                             <li><a class="text-lg text-blueGray-400 hover:text-blueGray-500" href="#">Second Link</a></li>
@@ -486,7 +487,7 @@
                         </ul>
                     </div>
                     <div class="w-full lg:w-auto mb-4">
-                        <h5 class="mb-6 text-lg font-bold font-heading">Catalog</h5>
+                        <h5 class="mb-6 text-lg font-bold">Catalog</h5>
                         <ul class="space-y-3">
                             <li><a class="text-lg text-blueGray-400 hover:text-blueGray-500" href="#">First Link</a></li>
                             <li><a class="text-lg text-blueGray-400 hover:text-blueGray-500" href="#">Second Link</a></li>
@@ -495,23 +496,23 @@
                 </div>
 
                 <!-- <div class="lg:hidden text-center">
-                    <p class="text-xs text-blueGray-400">&copy; 2020. All rights reserved.</p>
-                    <div class="-mx-2 mt-4">
-                        <a class="inline-block px-2" href="#">
-                            <img src="./metis-assets/icons/facebook-blue.svg" alt="" />
-                        </a>
-                        <a class="inline-block px-2" href="#">
-                            <img src="./metis-assets/icons/twitter-blue.svg" alt="" />
-                        </a>
-                        <a class="inline-block px-2" href="#">
-                            <img src="./metis-assets/icons/instagram-blue.svg" alt="" />
-                        </a>
-                    </div>
-                </div> -->
+					<p class="text-xs text-blueGray-400">&copy; 2020. All rights reserved.</p>
+					<div class="-mx-2 mt-4">
+						<a class="inline-block px-2" href="#">
+							<img src="./metis-assets/icons/facebook-blue.svg" alt="" />
+						</a>
+						<a class="inline-block px-2" href="#">
+							<img src="./metis-assets/icons/twitter-blue.svg" alt="" />
+						</a>
+						<a class="inline-block px-2" href="#">
+							<img src="./metis-assets/icons/instagram-blue.svg" alt="" />
+						</a>
+					</div>
+				</div> -->
             </div>
             <div class="block w-full pb-4 px-4 border-t border-gray-300">
                 <div class="flex lg:flex-row justify-between items-center flex-col">
-                    <p class="text-xs text-blueGray-400 pt-4 lg:pt-2">&copy; 2020. All rights reserved.</p>
+                    <p id="all-rights-reserved" class="text-xs text-blueGray-400 pt-4 lg:pt-2"></p>
                     <div class="mt-4">
                         <a class="inline-block px-2" href="#">
                             <img src="./metis-assets/icons/facebook-blue.svg" alt="" />
