--- a/public/trending-content.html
+++ b/public/trending-content.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Contact Us | Writee</title>
+        <title>Generate Trending Content With Writee</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
@@ -13,7 +13,7 @@
         <script src="./js/main.js"></script>
     </head>
 
-    <body class="antialiased bg-body text-body font-body">
+    <body>
         <header class="w-full">
             <div class="container px-4 mx-auto">
                 <!-- Nav starts -->
@@ -92,73 +92,64 @@
             </div>
         </header>
 
-        <section class="pt-10">
-            <div class="container px-4 mx-auto">
-                <div class="flex flex-wrap -mx-3">
-                    <div class="w-full lg:w-1/2 px-3">
-                        <div class="max-w-sm">
-                            <span class="text-sm text-blueGray-400">Contact Us</span>
-                            <h2 class="mt-2 text-4xl font-bold">We will be glad to hear from you!</h2>
-                        </div>
-                        <div class="mt-10 lg:mt-10">
-                            <div class="mb-10 leading-relaxed">
-                                <h3 class="text-sm text-blueGray-400">Phone</h3>
-                                <p>+91 85840 11454</p>
-                            </div>
-                            <div class="mb-10 leading-relaxed">
-                                <h4 class="text-sm text-blueGray-400">E-mail</h4>
-                                <p>hello@writee.in</p>
-                            </div>
-                            <div class="mb-10 leading-relaxed">
-                                <h4 class="text-sm text-blueGray-400">Address</h4>
-                                <p>164/41 Lake Gardens</p>
-                                <p>Kolkata, West Bengal, 700045</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="w-full lg:w-1/2 px-3">
-                        <form>
-                            <div class="mb-4 text-sm">
-                                <span class="mr-4 font-semibold">Send us a text: </span>
-                            </div>
-                            <!-- <div class="mb-4 text-sm">
-								<span class="mr-4 font-semibold">Departament:</span>
-								<label class="mr-4">
-									<input class="mr-1" type="radio" name="department" value="1" checked>
-									<span>Support</span>
-								</label>
-								<label>
-									<input class="mr-1" type="radio" name="department" value="2">
-									<span>Sales</span>
-								</label>
-							</div> -->
-                            <div class="mb-4">
-                                <input class="w-full p-4 text-xs font-semibold leading-none bg-blueGray-50 rounded outline-none" type="text" placeholder="Subject" />
-                            </div>
-                            <div class="mb-4">
-                                <input class="w-full p-4 text-xs font-semibold leading-none bg-blueGray-50 rounded outline-none" type="text" placeholder="Name" />
-                            </div>
-                            <div class="mb-4">
-                                <input class="w-full p-4 text-xs font-semibold leading-none bg-blueGray-50 rounded outline-none" type="email" placeholder="name@example.com" />
-                            </div>
-                            <div class="mb-4"><textarea class="w-full h-24 p-4 text-xs font-semibold leading-none resize-none bg-blueGray-50 rounded outline-none" type="text" placeholder="Message..."></textarea></div>
-                            <div class="mb-4">
-                                <label class="flex px-2 bg-blueGray-50 rounded">
-                                    <input class="hidden" type="file" placeholder="Choose file.." name="Choose file" />
-                                    <div class="my-1 ml-auto px-4 py-3 text-xs text-white font-semibold leading-none bg-blueGray-500 hover:bg-blueGray-600 rounded cursor-pointer">Browse</div>
-                                </label>
-                            </div>
-                            <div class="flex justify-between items-center">
-                                <label>
-                                    <input class="mr-1" type="checkbox" name="terms" value="1" />
-                                    <span class="text-sm font-semibold">I agree to terms and conditions.</span>
-                                </label>
-                                <button class="py-4 px-8 text-sm text-white font-semibold leading-none bg-indigo-600 hover:bg-indigo-700 rounded" type="submit">Submit</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
+        <section class="mx-16 lg:mx-32 my-8">
+            <div>
+                <p class="font-bold text-center md:text-left text-slate-400 text-sm md:text-xs">Beta</p>
+                <p class="font-bold text-center md:text-left text-4xl sm:text-6xl md:text-7xl">Trending Content Generator</p>
             </div>
         </section>
+
+        <main class="mx-8 lg:mx-0">
+            <section class="relative flex flex-wrap w-full">
+                <div class="w-full px-4 py-2 lg:w-1/2 sm:px-6 lg:px-4 sm:py-16 lg:py-8 flex lg:justify-end">
+                    <form action="" nme="contentForm" class="w-full lg:w-5/6 mb-0 space-y-4">
+                        <input type="text" class="appearance-none w-full py-4 px-4 bg-[#F9FAFC] text-gray-700 focus:outline-purple-500 placeholder-[#a0aab6] placeholder:font-semibold rounded-lg text-sm font-medium shadow" placeholder="Enter The Topic" />
+
+                        <!-- Drop Down Menu For Targeted Platform -->
+
+                        <div class="w-full relative">
+                            <div class="absolute h-full w-full z-10 text-right text-3xl align-middle px-3 pointer-events-none">&#8250;</div>
+                            <label class="text-gray-700" for="targetedPlatform">
+                                <select id="targetedPlatform" class="block w-full py-3 px-4 bg-[#F9FAFC] rounded-md focus:outline-purple-500 font-medium appearance-none shadow" name="targetedPlatform" autocomplete="off">
+                                    <option value="" disabled selected>Select Targeted Platform</option>
+                                    <option value="facebook">Facebook</option>
+                                    <option value="twitter">Twitter</option>
+                                    <option value="instagram">Instagram</option>
+                                    <option value="linkedin">LinkedIn</option>
+                                </select>
+                            </label>
+                        </div>
+
+                        <!-- This checkbox is used to check if we have to generate hashtags too or not -->
+
+                        <div class="flex items-center py-1">
+                            <input type="checkbox" name="isHashtag" id="isHashtag" class="ml-2" />
+                            <label for="isHashtag" class="text-center align-middle mx-2 font-bold"> Generate Hashtags Too?</label>
+                        </div>
+
+                        <!-- reset content and create magic button -->
+
+                        <div class="flex sm:flex-row items-center gap-4 pt-2">
+                            <button class="relative text-indigo-600 hover:text-white hover:bg-indigo-600 inline-block px-6 md:px-8 py-3 overflow-hidden border rounded border-indigo-600 group focus:outline-none focus:ring min-w-[100px] md:min-w-[180px] text-sm md:text-base">Brew Content!</button>
+                            <button class="relative inline-block px-6 md:px-8 py-3 overflow-hidden border rounded border-red-600 group text-sm md:text-base focus:outline-none text-red-600 focus:ring hover:bg-red-600 hover:text-white min-w-[100px] md:min-w-[180px]">Reset Content</button>
+                        </div>
+                    </form>
+                </div>
+
+                <div class="w-full px-4 py-6 lg:w-1/2 lg:px-4 sm:py-8 lg:py-8">
+                    <label class="text-gray-700" for="content">
+                        <textarea
+                            class="flex-1 appearance-none w-full py-2 px-4 bg-[#F9FAFC] text-gray-700 placeholder-[#a0aab6] placeholder:font-semibold rounded-md text-base focus:outline-purple-500 font-medium lg:w-5/6 shadow"
+                            id="content"
+                            placeholder="Content Is Brewing!!"
+                            name="content"
+                            rows="8"
+                            cols="40"
+                        ></textarea>
+                    </label>
+                    <!-- <img class="absolute inset-0 object-cover w-full h-full" src="https://www.hyperui.dev/photos/team-1.jpeg" alt="" /> -->
+                </div>
+            </section>
+        </main>
     </body>
 </html>
